# SmartAPI

./: .gitignore  pyproject.toml  requirements.txt
smartapi/: cli.py
smartapi.egg-info/: PKG-INFO  SOURCES.txt
smartapi/commands/: db_migrate.py  db_rollback.py  init.py  make_controller.py  make_crud.py  make_job.py  make_migration.py  make_model.py  make_module.py  make_router.py  make_schema.py  make_service.py
smartapi/templates/controller/: controller.py.tpl
smartapi/templates/init/: Dockerfile.tpl  README.md.tpl  docker-compose.yml.tpl  requirements.txt.tpl
smartapi/templates/jobs/: job.py.tpl
smartapi/templates/model/: model.py.tpl
smartapi/templates/router/: router.py.tpl
smartapi/templates/schema/: schema.py.tpl
smartapi/templates/service/: service.py.tpl
smartapi/utils/: templates.py
smartapi_cli.egg-info/: PKG-INFO  SOURCES.txt
